--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,5 +13,9 @@
   <form action="/reset" method="POST">
     <input type="submit" value="Nollaa">
   </form>
+  <div>Aseta arvo:</div>
+  <form action="/set" method="POST">
+    <input type="text" name="value">
+    <input type="submit" value="Aseta">
 </body>
 </html>
